test/Fail/Issue3517/S.agda
{-# OPTIONS --safe --sized-types #-}

module Issue3517.S where

open import Agda.Builtin.Size public
